# intelliagent

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruffignore  License  Makefile  README.md  changes.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  overall.ipynb  overall.md
.github/workflows/: cd.yml  ci.yml  lint.yml  test.yml
backend/: .env.example  .ruffignore  README.md  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 799e00d1e251_initial_schema.py  831e7cea0d1d_initial_schema.py  b8e2d71fc4bf_initial_schema.py
backend/app/: __init__.py  dependencies.py  exceptions.py  main.py  middleware.py  settings.py
backend/app/agents/: checkpointer.py  config.py  graph_factory.py  interrupts.py  langgraph.json  state.py
backend/app/agents/edges/: conditional_edge.py  routing_logic.py
backend/app/agents/memory/: memory_manager.py  postgres_store.py  redis_store.py
backend/app/agents/nodes/: base_node.py  planner.py  retriever.py  solver.py  tool_node.py  verifier.py
backend/app/api/: deps.py
backend/app/api/v1/: chat.py  documents.py  router.py  users.py
backend/app/core/: auth.py  rate_limiter.py  security.py
backend/app/db/: base.py  base_class.py  elasticsearch_client.py  session.py  sync_session.py  vector_db.py
backend/app/evals/: evaluator.py  langsmith_integration.py  metrics.py
backend/app/models/: __init__.py  audit.py  chunk.py  conversation.py  document.py  evaluation.py  graph_checkpoint.py  message.py  project.py  user.py
backend/app/rag/: chunker.py  embedder.py
backend/app/rag/index/: keyword_indexer.py
backend/app/rag/ingest/: base_connector.py  drive_connector.py  file_connector.py  metadata_extractor.py  pii_redactor.py  preprocessor.py  s3_connector.py  test_file_connector.py
backend/app/rag/ocr/: layout_analyzer.py  rapidocr_engine.py  tesseract_engine.py
backend/app/rag/retrieval/: citation_formatter.py  filters.py  fusion.py  hybrid_retriever.py  keyword_retriever.py  reranker.py  vector_retriever.py
backend/app/schemas/: chat.py
backend/scripts/: agent_foundation_test.py  guardrail_test.py  hybrid_search_test.py  install_spacy_model.py  keyword_search_test.py  manual_db_test.py  memory_checkpoint_test.py  node_checkpoint_test.py  phase_1_final_checklist.py  rate_limit_test.py  run_evals.py  test_db.txt
backend/tests/: conftest.py  test_example.py
backend/tests/agents/: test_agent_execution.py  test_graph_factory.py
backend/tests/agents/memory/: test_memory_manager.py
backend/tests/agents/nodes/: test_planner.py  test_retriever.py  test_solver.py  test_tool_node.py  test_verifier.py
backend/tests/api/v1/: test_api_chat.py  test_streaming.py
backend/tests/rag/: test_chunker.py  test_embedder.py
backend/tests/rag/index/: test_keyword_indexer.py
backend/tests/rag/ocr/: test_tesseract_engine.py
backend/tests/rag/retrieval/: test_filters.py  test_hybrid_retriever.py
backend/workers/: celery_app.py
backend/workers/tasks/: index_tasks.py  ingest_tasks.py  ocr_tasks.py  process_text_tasks.py
deploy/: .dockerignore  Dockerfile.api  Dockerfile.web
docs/: api-specification.md  architecture.md  development-guide.md  mcp-integration.md  ops-runbook.md  rag-design.md  security-policies.md
frontend/: .prettierrc  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/components/chat/: ChatStream.tsx
scripts/: healthcheck.sh
