[project]
name = "intelliagent-backend"
version = "0.1.0"
description = "The backend service for the IntelliAgent platform."
authors = [
    {name = "Mohit Verma", email = "mviitb25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

# Production Dependencies
dependencies = [

    # Core Framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # LangChain Ecosystem
    "langchain>=0.2.0,<0.3.0",
    "langgraph>=0.1.0,<0.2.0",
    "langsmith>=0.1.0,<0.2.0",
    "langchain==0.2.11",
    "langchain-text-splitters==0.2.2",
    "tiktoken==0.7.0",

    # LLM Providers
    "openai>=1.2.0",
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",

    # Data & DB
    "pydantic>=2.7.0,<3.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "redis[hiredis]>=5.0.0",
    "elasticsearch==8.11.0",
    "qdrant-client>=1.9.0",

    # Workers & Tasks
    "celery[redis]>=5.4.0",

    # Add these with other dependencies
    "pytesseract==0.3.10",
    "pdf2image==1.17.0",
    "rapidocr-onnxruntime==1.3.2",

    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "asyncpg>=0.30.0",
    "python-multipart==0.0.9", # For FastAPI File Uploads
    "boto3==1.34.141",         # For S3 Connector
    "langdetect==1.0.9",       # For language detection
    "spacy==3.7.5",            # For PII Redaction
    "pdfplumber==0.11.1",      # For PDF metadata
    "python-docx==1.1.2",      # For DOCX metadata


    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]==3.3.0",
    "redis==5.0.7",

]

[project.optional-dependencies]
# Development Dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.4.0",    # Added
    "isort>=5.13.0",     # Added
    "pre-commit>=3.7.0", # Added
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N", "D"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D107",  # Missing docstrings
    "D200", "D203", "D205", "D212", "D401", "D415", "D417",          # Docstring formatting
    "E402",  # Module level import not at top (for celery_app.py multiprocessing fix)
]

# Added Black configuration
[tool.black]
line-length = 120

# Added isort configuration
[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
