[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "workers", "alembic"]  # List all your top-level packages
package-dir = { "" = "." }  # Tell setuptools to look in the root directory

[project]
name = "intelliagent-backend"
version = "0.1.0"
description = "The backend service for the IntelliAgent platform."
authors = [
    {name = "Mohit Verma", email = "mviitb25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

# Production Dependencies
dependencies = [
    # Core Framework
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas",
    "argon2-cffi",
    # LangChain Ecosystem
    "langchain>=0.2.0,<0.3.0",
    "langgraph>=0.1.0,<0.2.0",
    "langsmith>=0.1.0,<0.2.0",
    "langchain==0.2.11",
    "langchain_openai",
    "langchain_groq",
    "langchain_google_genai",
    "langchain-text-splitters==0.2.2",
    "tiktoken==0.7.0", # Tokenizer
    # LLM Providers
    "openai>=1.2.0",
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
    "sentence-transformers>=3.0.0", # To convert into embeddings
    "torch>=2.0.0",
    # Data & DB
    "pydantic>=2.7.0,<3.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0", # For database operations in python with psql, [binary] includes pre-compiled binaries
    "redis[hiredis]>=5.0.0", # In-memory data structure store with python client
    "elasticsearch==8.11.0", # search and analytics engine
    "qdrant-client>=1.9.0", # Vector similarity search engine
    # Workers & Tasks
    "celery[redis]>=5.4.0", # Distributed task queue, Handles background tasks aysnchronously. [redis] is the message broker.
    # Add these with other dependencies
    "pytesseract==0.3.10",
    "pdf2image==1.17.0",
    "rapidocr-onnxruntime==1.3.2",
    # Observability
    "opentelemetry-api>=1.25.0", # Monitoring and Debugging
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "asyncpg>=0.30.0",
    "python-multipart==0.0.9", # For FastAPI File Uploads
    "boto3==1.34.141", # For S3 Connector
    "langdetect==1.0.9", # For language detection
    "spacy==3.7.5", # For PII Redaction  (Identifies and redacts personally identifiable information for data privacy.)
    "pdfplumber==0.11.1", # For PDF metadata
    "python-docx==1.1.2", # For DOCX metadata
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]==3.3.0",
    "redis==5.0.7",
    "langgraph-cli>=0.4.3",
]

[project.optional-dependencies]
# Development Dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",   # python linter
    "mypy>=1.10.0",   # static type checker
    "black>=24.4.0",    # Code formatter
    "isort>=5.13.0",     # import sorter
    "pre-commit>=3.7.0", # Added
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N", "D"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D107",  # Missing docstrings
    "D200", "D203", "D205", "D212", "D401", "D415", "D417",          # Docstring formatting
    "E402",  # Module level import not at top (for celery_app.py multiprocessing fix)
]

# Added Black configuration
[tool.black]
line-length = 120

# Added isort configuration
[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
